Bug 443178 - Tooltips cause bogus mouse events. r=josh

--HG--
extra : rebase_source : 40eba323189da67fa33d3a2b3c6ef1e98fe360f4